kustomizations/media/flaresolverr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  labels:
    app: flaresolverr
    app.kubernetes.io/name: flaresolverr
spec:
  selector:
    matchLabels:
      app: flaresolverr
      app.kubernetes.io/name: flaresolverr
  template:
    metadata:
      labels:
        app: flaresolverr
        app.kubernetes.io/name: flaresolverr
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: flaresolverr
        image: ghcr.io/flaresolverr/flaresolverr:latest
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "sleep 10"]
        ports:
        - containerPort: 8191
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: "1"
            memory: 2Gi
        livenessProbe:
          tcpSocket:
            port: 8191
          initialDelaySeconds: 40
          periodSeconds: 30
        readinessProbe:
          tcpSocket:
            port: 8191
          initialDelaySeconds: 20
          periodSeconds: 10
