kustomizations/media/flaresolverr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  labels:
    app: flaresolverr
    app.kubernetes.io/name: flaresolverr
    app.kubernetes.io/part-of: streaming-stack
spec:
  selector:
    app: flaresolverr
  ports:
  - name: http
    port: 8191
    targetPort: 8191
