kustomizations/media/flaresolverr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaresolverr
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: media-keda-http@kubernetescrd
    traefik.ingress.kubernetes.io/router.timeout: 120s
spec:
  rules:
  - host: flaresolverr.citocafecito.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flaresolverr
            port:
              number: 8191
          # service:
          #   name: keda-add-ons-http-interceptor-proxy
          #   port:
          #     number: 8080
